--- a/exercícios/aula10/ex006.html
+++ b/exercícios/aula10/ex006.html
@@ -17,8 +17,25 @@
     </style>
 </head>
 <body>
-    <div id="area">
+    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
         Interaja...
     </div>
+
+    <script>
+
+        var a = window.document.getElementById('area')
+
+        function clicar() {
+            a.innerText = 'Clicou!'
+            a.style.backgroundColor = 'red'
+        }
+        function entrar() {
+            a.innerText = 'Entrou!'
+        }
+        function sair() {
+            a.innerText = 'Saiu!'
+            a.style.backgroundColor = 'green'
+        }
+    </script>
 </body>
 </html>
