deixando html mais clean

--- a/exercícios/aula10/ex006.html
+++ b/exercícios/aula10/ex006.html
@@ -17,13 +17,16 @@
     </style>
 </head>
 <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
+    <div id="area">
         Interaja...
     </div>
 
     <script>
 
         var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
 
         function clicar() {
             a.innerText = 'Clicou!'
