verificador de idade finalizado

--- a/desafios/desafio02/modelo/modelo.html
+++ b/desafios/desafio02/modelo/modelo.html
@@ -3,27 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do Dia</title>
+    <title>Verificador de Idade</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Verificador de Idade</h1>
     </header>
-
     <section>
-        <div id="msg">
-            <p>Horas</p>
+        <div>
+            <p>Ano de Nascimento: 
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo: 
+                <input type="radio" name="radsex" id="mas" checked>
+                <label for="mas">Masculino</label>
+                <input type="radio" name="radsex" id="fem" >
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="../imagens/dia.jpg" alt="nascer do sol">
+        <div id="res">
+            Preencha os dados acima para ver o resultado!
         </div>
     </section>
-
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
