--- a/desafios/desafio03/modelo/modelo.html
+++ b/desafios/desafio03/modelo/modelo.html
@@ -26,9 +26,13 @@
         <p>
             <input type="submit" value="Contar" onclick="contador()">
         </p>
+        <div id="res">
+            Preparando a contagem...
+        </div>
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
